wazuh/dashboard-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-dashboard
  template:
    metadata:
      labels:
        app: wazuh-dashboard
      name: wazuh-dashboard
    spec:
      volumes:
        - name: config
          configMap:
            name: dashboard-conf
        - name: dashboard-certs
          secret:
            secretName: dashboard-certs
      containers:
        - name: wazuh-dashboard
          image: 'wazuh/wazuh-dashboard:4.11.0'
          resources:
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: config
              mountPath: /usr/share/wazuh-dashboard/config/opensearch_dashboards.yml
              subPath: opensearch_dashboards.yml
              readOnly: false
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/dashboard.pem
              readOnly: true
              subPath: dashboard.pem
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/dashboard-key.pem
              readOnly: true
              subPath: dashboard-key.pem
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/root-ca.pem
              subPath: root-ca.pem
              readOnly: true
          ports:
            - containerPort: 5601
              name: dashboard
