wazuh/indexer-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-indexer
  namespace: wazuh
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wazuh-indexer
  serviceName: wazuh-indexer
  template:
    metadata:
      labels:
        app: wazuh-indexer
      name: wazuh-indexer
    spec:
      # Set the wazuh-indexer volume permissions so the wazuh-indexer user can use it
      volumes:
        - name: indexer-certs
          secret:
            secretName: indexer-certs
        - name: indexer-conf
          configMap:
            name: indexer-conf
      containers:
        - name: wazuh-indexer
          image: 'wazuh/wazuh-indexer:4.11.0'
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1
              memory: 2Gi              
          securityContext:
            capabilities:
              add: ["SYS_CHROOT"]
          volumeMounts:
            - name: wazuh-indexer
              mountPath: /var/lib/wazuh-indexer
            - name: indexer-certs
              mountPath: /usr/share/wazuh-indexer/certs/node-key.pem
              subPath: node-key.pem
              readOnly: true
            - name: indexer-certs
              mountPath: /usr/share/wazuh-indexer/certs/node.pem
              subPath: node.pem
              readOnly: true
            - name: indexer-certs
              mountPath: /usr/share/wazuh-indexer/certs/root-ca.pem
              subPath: root-ca.pem
              readOnly: true
            - name: indexer-certs
              mountPath: /usr/share/wazuh-indexer/certs/admin.pem
              subPath: admin.pem
              readOnly: true
            - name: indexer-certs
              mountPath: /usr/share/wazuh-indexer/certs/admin-key.pem
              subPath: admin-key.pem
              readOnly: true
            - name: indexer-conf
              mountPath: /usr/share/wazuh-indexer/opensearch.yml
              subPath: opensearch.yml
              readOnly: true
            - name: indexer-conf
              mountPath: /usr/share/wazuh-indexer/opensearch-security/internal_users.yml
              subPath: internal_users.yml
              readOnly: true
          ports:
            - containerPort: 9200
              name: indexer-rest
            - containerPort: 9300
              name: indexer-nodes
  volumeClaimTemplates:
    - metadata:
        name: wazuh-indexer
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
