wazuh/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app: wazuh-dashboard
spec:
  type: ClusterIP
  selector:
    app: wazuh-dashboard
  ports:
    - name: dashboard
      port: 5601
      targetPort: 5601
