wazuh/indexer-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-indexer
  namespace: wazuh
  labels:
    app: wazuh-indexer
spec:
  selector:
    app: wazuh-indexer
  ports:
    - name: indexer-nodes
      port: 9300
      targetPort: 9300
  clusterIP: None
