wazuh/wazuh-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh  # Don't change, unless you update the Wazuh dashboard app config
  labels:
    app: wazuh-manager
spec:
  type: LoadBalancer
  selector:
    app: wazuh-manager
    node-type: master
  ports:
    - name: registration
      port: 1515
      targetPort: 1515    
    - name: api
      port: 55000
      targetPort: 55000
