wazuh/wazuh-workers-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wazuh-workers
spec:
  type: LoadBalancer
  selector:
    app: wazuh-manager
  ports:
    - name: agents-events
      port: 1514
      targetPort: 1514
