wazuh/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: dashboard
      port:
        number: 5601
  rules:
  - host: wazuh-dashboard.local
    http:
      paths:
      - backend:
          service:
            name: dashboard
            port:
              number: 5601
        path: /*
        pathType: ImplementationSpecific
  tls: []
